other/apply-pss-restricted-profile/.chainsaw-test/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod01
spec:
  containers:
    - image: busybox:1.35
      name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: pod02
spec:
  containers:
    - image: busybox:1.35
      name: busybox
    - image: busybox:1.35
      name: busybox2
---
apiVersion: v1
kind: Pod
metadata:
  name: pod03
spec:
  securityContext:
    runAsNonRoot: false
    runAsUser: 2000
    runAsGroup: 1000
    fsGroup: 3000
  containers:
    - image: busybox:1.35
      name: busybox
    - image: busybox:1.35
      name: busybox2
      securityContext:
        privileged: true
        capabilities:
          drop: 
          - "CAP_NET_RAW"
        allowPrivilegeEscalation: true
