other/apply-pss-restricted-profile/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: apply-pss-restricted-profile
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../apply-pss-restricted-profile.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: pods.yaml
    - apply:
        file: podcontrollers.yaml
  - name: step-03
    try:
    - assert:
        file: pods-patched.yaml
    - assert:
        file: podcontrollers-patched.yaml
